# Copyright 2018-2022 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_url"
version = "0.38.0"
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/denoland/deno"
description = "URL API implementation for Deno"

[lib]
path = "lib.rs"

[dependencies]
deno_core = { version = "0.120.0", path = "../../core" }
serde = { version = "1.0.129", features = ["derive"] }
serde_repr = "0.1.7"
urlpattern = "0.1.5"
